Bug 435519 - Shape Stroke is set to 1px after selecting 'No fill' and undo it
Summary: Shape Stroke is set to 1px after selecting 'No fill' and undo it
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-08 17:16 UTC by acc4commissions
Modified: 2021-05-21 17:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2021-04-08 17:16:40 UTC
SUMMARY
git 3cdb75d

I think this might be a duplicate but I couldn't find the same report.

STEPS TO REPRODUCE
1. Make a shape on a vector layer, with a stroke width other than 1px.
2. Select 'No fill' in the stroke tab, and select back to Solid or Gradient.

OBSERVED RESULT
Stroke width is set to 1px. 

EXPECTED RESULT
It should preserve the width. 

SOFTWARE/OS VERSIONS
Windows: Windows10 x64
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 acc4commissions 2021-04-08 17:17:51 UTC
* Width -> Thickness
I should've used the correct term used in Krita...
Comment 2 Ahab Greybeard 2021-04-14 14:57:01 UTC
I can confirm this for the Apr 13 5.0.0-prealpha (git b80b015) and 4.4.3 appimages running on Debian 10.

I can think of two different 'fixes'

1. Have the tool options remember the Thickness of the currently selected vector shape.

2. Have the Thickness become changed to the current brush size. This would give the possibility of quickly changing many vector shapes to a given line thickness.
(This is an extra facility and not a 'fix'.)
Comment 3 sh_zam 2021-05-21 17:18:06 UTC
Git commit 1d04655f151218e39e0d149596e5eb99542e06bd by Sharaf Zaman.
Committed on 21/05/2021 at 17:14.
Pushed by szaman into branch 'master'.

Bugfix: Stroke width resets after "No Fill"

M  +5    -7    libs/ui/widgets/KoFillConfigWidget.cpp

https://invent.kde.org/graphics/krita/commit/1d04655f151218e39e0d149596e5eb99542e06bd