Bugfix: Stroke width resets after "No Fill"

BUG:435519